--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "version": "2.9.1",
-  "name": "ge2015-worm",
+  "name": "ge-worm",
   "description": "a worm for the General Election.",
   "main": "./index.js",
   "dependencies": {
-    "colors": "*",
-    "node-twitter": "*",
-    "sentiment": "*",
-    "socket.io": "*"
+    "colors": "1.4.0",
+    "node-twitter": "0.5.3",
+    "sentiment": "5.0.2",
+    "socket.io": "2.3.0"
   }
 }
